src/components/Modal1.css
.modal1Container__container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 120vh;
  margin-top: -35vw;
  background-color: rgb(231, 227, 227);
  opacity: 0.95;
  position: fixed;
  z-index: 10;
  cursor: pointer;
}

.modal1__container {
  font-family: "C90Degree";
  font-weight: 900;
  color: #16463b;
  text-shadow: 0.1px 0.3px, 0.2px 0.6px #16463b;
  font-size: 3.8vw;
  width: 72.821vw;
  height: 50vw;
  border: 2.051vw solid #d23021;
  background-color: white;
  border-radius: 4vw;
  z-index: 10;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.modal1__textContainer {
  display: flex;
  flex-direction: column;
}
.small {
  font-size: 2.3vw;
  margin-bottom: 0.8vw;
}
#modal2 {
  border: 3.8vw solid #d7bf4c;
  border-radius: 40vw;
  height: 35vw;
}
.modal2__choices {
  display: flex;
  margin-top: 5vw;
  justify-content: center;
  gap: 28vw;
}
.modal2__circles {
  height: 4vw;
  width: 4vw;
  border-radius: 50%;
  background-color: #4b5c28;
}
.modal2__circles:nth-child(2) {
  background-color: #95b2d5;
}
.modal2__circles > span {
  position: relative;
  top: 4vw;
  right: 2vw;
}
.modal3 > svg {
  width: 70vw;
  height: 70vw;
}
.modal4__svg > svg {
  width: 60vw;
  height: 60vw;
}
@media screen and (min-width: 768px) {
  .modal1Container__container {
    margin-top: -15vw;
  }
  .modal1__container {
    width: 57.943;
    height: 49.87vw;
  }
}

@media screen and (min-width: 1200px) {
  .modal1Container__container {
    height: 120vh;
    margin-top: -15vw;
  }

  .modal1__container {
    width: 36.458vw;
    height: 21.875vw;
    border: 0.781vw solid #d23021;
    border-radius: 1.042vw;
    font-size: 1.042vw;
  }
  .small {
    font-size: 1.5vw;
  }

  .modal3 > svg {
    width: 45vw;
    height: 45vw;
  }
  .modal4__svg > svg {
    width: 36vw;
    height: 36vw;
  }
  #modal2 {
    border: 1.4vw solid #d7bf4c;
    border-radius: 40vw;
    height: 22vw;
  }
  #modal2__textContainer {
    margin-top: -5vw;
  }
  .modal2__choices {
    margin-top: 1vw;
    gap: 17vw;
  }
  .modal2__circles {
    height: 3vw;
    width: 3vw;
  }
  .modal2__circles > span {
    position: relative;
    top: 4vw;
    right: 2vw;
  }
}

